# c_gcc_gh_actions

./: CMakeLists.txt  README.md  answer.c  answer.h  main.c  test_main.c
.github/workflows/: cmake.yml
